# simple-vm

./: .gitignore  Cargo.toml  Makefile  fib.asm  fib.code  t  test.asm  test.code
lang/: Cargo.toml
lang/src/: args.rs  ast.rs  character.rs  combinator.rs  error.rs  language.rs  lib.rs  parse.rs  tokenize.rs
lang/src/compile/: block.rs  codegen.rs  context.rs  error.rs  mod.rs  resolve.rs  util.rs
lang/src/compile/codegen/: expression.rs  util.rs
lang/tests/: common.rs
lib/macros/: Cargo.toml
lib/macros/src/: lib.rs
src/: io.rs  lib.rs  memory.rs  op.rs  op_fields.rs  register.rs  vm.rs  wasm.rs
src/pp/: macros.rs  mod.rs
tests/: arith.rs  common.rs  flow.rs  memory.rs  misc.rs  stack.rs  test.rs
vm/: Cargo.toml
vm/src/: op.rs
vm/src/binfmt/: mod.rs
vm/tests/: common.rs  stack.rs  test.rs
www/: help.html  hw.js  index.html  readme.html
