[package]
name = "simplevm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.95"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"

[[bin]]
name = "vm"

[[bin]]
name = "asm"

[[bin]]
name = "dis"

[dependencies.macros]
path = "lib/macros"